# kimi-code-status

./: Cargo.toml  Makefile
frontend/src/__tests__/: App.test.tsx
frontend/src/components/: QuotaCard.tsx
src/: config.rs  formatter.rs  harness.rs  keychain.rs  main.rs  scheduler.rs  statusbar.rs  types.rs
src-tauri/src/: lib.rs  scheduler.rs
src/providers/: codex.rs  kimi.rs  mod.rs
