[package]
name = "kimi-code-status"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
description = "macOS menu bar app for Kimi Code & Codex subscription usage"
license = "MIT"

[dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }

# JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# macOS native bindings
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = "0.3"

# Keychain access
security-framework = "3"

# Async trait support
async-trait = "0.1"

# Logging
env_logger = "0.11"
log = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Home directory
dirs = "6"

# Grand Central Dispatch for main-thread callbacks
dispatch = "0.2"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
strip = "symbols"
